--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,12 @@
   "newProjectRoot": "projects",
   "projects": {
     "angular-i18n": {
+      "i18n": {
+        "sourceLocale": "en-US",
+        "locales": {
+          "ja": "src/locale/messages.ja.json"
+        }
+      },
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -41,6 +47,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "localize": true,
             "outputPath": "dist/angular-i18n",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -60,6 +67,9 @@
             "scripts": []
           },
           "configurations": {
+            "en-US": {
+              "localize": ["en-US"]
+            },
             "production": {
               "budgets": [
                 {
@@ -76,9 +86,13 @@
               "outputHashing": "all"
             },
             "development": {
+              "localize": false,
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
+            },
+            "ja": {
+              "localize": ["ja"]
             }
           },
           "defaultConfiguration": "production"
@@ -98,7 +112,8 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "angular-i18n:build"
+            "buildTarget": "angular-i18n:build",
+            "outputPath": "src/locale"
           }
         }
       }
