--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
+    "@angular/localize": "^17.0.2",
     "typescript": "~5.2.2"
   }
 }
