--- a/angular.json
+++ b/angular.json
@@ -105,6 +105,9 @@
             },
             "development": {
               "buildTarget": "angular-i18n:build:development"
+            },
+            "jp": {
+              "buildTarget": "angular-i18n:build:jp"
             }
           },
           "defaultConfiguration": "development"
